# controller.py
@@ -138,3 +138,44 @@ def hour_average_value(param):
         """,['%d',param])
         result = [models.HourAverageValue(*row) for row in cs.fetchall()]
         return result
+    
+def hour_average_value_by_source(param, source):
+    if param == 'humcount':
+        with pool.connection() as conn, conn.cursor() as cs:
+            cs.execute("""
+            SELECT source, hour, AVG(value) as value
+            FROM (
+            SELECT source,
+                CONVERT(DATE_FORMAT(ts, %s), SIGNED) AS day, 
+                MONTH(ts) as month, 
+                YEAR(ts) as year, 
+                HOUR(ts) as hour, 
+                SUM(value) as value
+            FROM `main` 
+            WHERE param=%s and source=%s
+            GROUP BY source, year, month,day,hour 
+            ORDER BY source, year,month, day,hour  
+            ) group_date
+            GROUP BY source, hour
+            """,['%d',param, source])
+            result = [models.HourAverageValue(*row) for row in cs.fetchall()]
+            return result
+    with pool.connection() as conn, conn.cursor() as cs:
+        cs.execute("""
+        SELECT source, hour, AVG(value) as value
+        FROM (
+        SELECT source,
+            CONVERT(DATE_FORMAT(ts, %s), SIGNED) AS day, 
+            MONTH(ts) as month, 
+            YEAR(ts) as year, 
+            HOUR(ts) as hour, 
+            AVG(value) as value
+        FROM `main` 
+        WHERE param=%s and source=%s
+        GROUP BY source, year,month,day,hour 
+        ORDER BY source, year,month, day,hour  
+        ) group_date
+        GROUP BY source, hour
+        """,['%d',param, source])
+        result = [models.HourAverageValue(*row) for row in cs.fetchall()]
+        return result
